Utilities/otbliblas/csharp/dotnetLibLAS/LibLASCAPI.cs


        /** Sets the major version number for the header.  All values other than 1 
        *  are invalid.
        *  @param hHeader LASHeaderH instance
        *  @param value integer value to set the major version to (only the value 1 is valid)
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetVersionMajor(LASHeaderH hHeader, byte value);

        /** Returns the min version number for the header.  This value is expected 
        *  to be 1 or 0 representing LAS 1.1 or LAS 1.0
        *  @param hHeader LASHeaderH instance
        *  @return minor version number for the header.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern byte LASHeader_GetVersionMinor(LASHeaderH hHeader);

        /** Sets the minor version number for the header.  All values other than 1 or 0 
        *  are invalid.
        *  @param hHeader LASHeaderH instance
        *  @param value integer value to set the minor version to (only the values 1 or 0 are valid)
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetVersionMinor(LASHeaderH hHeader, byte value);

        /** Returns the System ID for the header.  The caller assumes ownership of the returned string
        *  @return the system id for the header as a character array
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern String LASHeader_GetSystemId(LASHeaderH hHeader);

        /** Sets the System ID for the header.  By default, this value is "libLAS" if it 
        *  is not explicitly set.  See the LAS specification for details on what this
        *  value should logically be set to.
        *  @param hHeader LASHeaderH instance
        *  @param value the value to set as the System ID for the header
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetSystemId(LASHeaderH hHeader, String value);

        /** Returns the Software ID for the header.  The caller assumes ownership of the returned string
        *  @return the software id for the header as a character array
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern String LASHeader_GetSoftwareId(LASHeaderH hHeader);

        /** Sets the Software ID for the header.  By default, this value is "libLAS 1.0" if it 
        *  is not explicitly set.  See the LAS specification for details on what this
        *  value should logically be set to.
        *  @param hHeader LASHeaderH instance
        *  @param value the value to set as the Software ID for the header
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetSoftwareId(LASHeaderH hHeader, String value);

        /** Returns the reserved value for the header.  This should aways be 0.
        *  @return the reserved value for the header.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern Int16 LASHeader_GetReserved(LASHeaderH hHeader);

        /** Returns the file creation day of the year.  The values start from 1, being January 1st, 
        *  and end at 365 or 366 being December 31st, depending on leap year.
        *  @return the day of the year as an integer starting from 1 for the file creation.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt16 LASHeader_GetCreationDOY(LASHeaderH hHeader);

        /** Sets the file creation day of the year.  The values start from 1, being January 1st.  No
        *  date validation is done
        *  @param hHeader LASHeaderH instance
        *  @param value the value to set as the creation day
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetCreationDOY(LASHeaderH hHeader, UInt16 value);

        /** Returns the file creation year.  This is a four digit number representing the 
        *  year for the file, ie 2003, 2008, etc.
        *  @return the creation year for the file or 0 if none is set
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt16 LASHeader_GetCreationYear(LASHeaderH hHeader);

        /** Sets the file creation year.  This should be a four digit number representing
        *  the year for the file, ie 2003, 2008, etc.  No validation on the value is done
        *  @param hHeader LASHeaderH instance
        *  @param value the value to set for the creation year
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetCreationYear(LASHeaderH hHeader, UInt16 value);

        /** Returns the size of the header for the file in bytes.
        *  @return the size of the header for the file in bytes.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt16 LASHeader_GetHeaderSize(LASHeaderH hHeader);

        /** Returns the byte offset to the start of actual point data for the file
        *  @param hHeader LASHeaderH instance
        *  @return the type offset to the start of actual point data for the file
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt32 LASHeader_GetDataOffset(LASHeaderH hHeader);

        /** Returns the number of variable length records in the header
        *  @param hHeader LASHeaderH instance
        *  @return the number of variable length records in the header
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt32 LASHeader_GetRecordsCount(LASHeaderH hHeader);

        /** Returns the record length for the points based on their data format id in bytes
        *  @param hHeader LASHeaderH instance
        *  @return the record length for the points based on their data format id in bytes
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt16 LASHeader_GetDataRecordLength(LASHeaderH hHeader);

        /** Returns the data format id.  If this value is 1, the point data have time values
        *  associated with them.  If it is 0, the point data do not have time values.  
        *  @param hHeader LASHeaderH instance
        *  @return the data format id for the file.
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern byte LASHeader_GetDataFormatId(LASHeaderH hHeader);

        /** Sets the data format id for the file.  The value should be 1 or 0, with 1 being
        *  points that contain time values and 0 being points that do not.
        *  @param hHeader LASHeaderH instance
        *  @param value the value for the data format id, 1 or 0 are valid values.
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetDataFormatId(LASHeaderH hHeader, byte value);

        /** Returns the number of point records in the file.  This value may not reflect the actual 
        *  number of point records in the file.
        *  @param hHeader LASHeaderH instance
        *  @return the number of point records in the file
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt32 LASHeader_GetPointRecordsCount(LASHeaderH hHeader);

        /** Sets the number of point records for the file.
        *  @param hHeader LASHeaderH instance
        *  @param value the long integer to set for the number of point records in the file
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetPointRecordsCount(LASHeaderH hHeader, UInt32 value);

        /** Returns the number of point records by return.
        *  @param hHeader LASHeaderH instance
        *  @param index the return number to fetch the count for
        *  @return the number of point records for a given return
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern UInt32 LASHeader_GetPointRecordsByReturnCount(LASHeaderH hHeader, int index);

        /** Sets the number of point records for a given return
        *  @param hHeader LASHeaderH instance
        *  @param index the return number to set the count for
        *  @param value the number of point records for the return 
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetPointRecordsByReturnCount(LASHeaderH hHeader, int index, UInt32 value);

        /** Return the X scale factor
        *  @param hHeader LASHeaderH instance
        *  @return the X scale factor
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASHeader_GetScaleX(LASHeaderH hHeader);

        /** Return the Y scale factor
        *  @param hHeader LASHeaderH instance
        *  @return the Y scale factor
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASHeader_GetScaleY(LASHeaderH hHeader);

        /** Return the Z scale factor
        *  @param hHeader LASHeaderH instance
        *  @return the Z scale factor
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASHeader_GetScaleZ(LASHeaderH hHeader);

        /** Sets the scale factors
        *  @param hHeader LASHeaderH instance
        *  @param x the x scale factor
        *  @param y the y scale factor
        *  @param z the z scale factor
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetScale(LASHeaderH hHeader, double x, double y, double z);

        /** Return the X offset
        *  @param hHeader LASHeaderH instance
        *  @return the X offset
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASHeader_GetOffsetX(LASHeaderH hHeader);

        /** Return the Y offset
        *  @param hHeader LASHeaderH instance
        *  @return the Y offset
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASHeader_GetOffsetY(LASHeaderH hHeader);

        /** Return the Z offset
        *  @param hHeader LASHeaderH instance
        *  @return the Z offset
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASHeader_GetOffsetZ(LASHeaderH hHeader);

        /** Sets the offset values
        *  @param hHeader LASHeaderH instance
        *  @param x the x offset
        *  @param y the y offset
        *  @param z the z offset
        *  @return LASError enum
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern LASError LASHeader_SetOffset(LASHeaderH hHeader, double x, double y, double z);

        /** Return the minimum x value
        *  @param hHeader LASHeaderH instance
        *  @return the minimum x value
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASHeader_GetMinX(LASHeaderH hHeader);

        /** Return the minimum y value
        *  @param hHeader LASHeaderH instance
        *  @return the minimum y value
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASHeader_GetMinY(LASHeaderH hHeader);

        /** Return the minimum z value
        *  @param hHeader LASHeaderH instance
        *  @return the minimum z value
        */
        [DllImport(DLL_LAS_VERSION)]
        public static extern double LASHeader_GetMinZ(LASHeaderH hHeader);
